syntax = "proto3";

package transport_catalogue_serialize;

message RGB {
uint32 red = 1;
uint32 green = 2;
uint32 blue = 3;
}

message RGBA {
uint32 red = 1;
uint32 green = 2;
uint32 blue = 3;
double opacity = 4;
}

message Color {
oneof variant{
string string_color = 1;
RGB RGB_color = 2;
RGBA RGBA_color = 3;
}
}

message Point {
double x = 1;
double y = 2;
}